src/App.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
/* APP */
.App{
  font-family: "Poppins";
}

/* NAV */
.menu-drop a{
  color: #343434 !important;
  text-decoration: none !important;
  font-size:13px;
}
.menuButton{
  margin-top:-10px;
}

/* HOME PAGE */
.ContainerWrap{
  padding-top:5vh;
}

.head{
  font-family: "Libre Baskerville";
  font-weight: 800;
}

.subheaderItalics{
  font-style:italic;
}

/*.homeToDoList, .homeCalendar{
  border: 1px solid #DDDDDD;
  padding: 0px;
  margin:0px;
}*/

.homeToDoListHeader, .homeCal{
  font-family: "Libre Baskerville" !important;
  font-weight:700;
  font-size:25px;
  background-color:#EEEEEE;
  border-radius:10px;
  padding:10px;
}

.homeCalEl{
  width:100%;
  height:50vh;
}

.addTaskInput{
  border-radius: 10px;
  border: 0px;
  background-color: #EEEEEE;
  width:88%;
  padding: 5px 10px;
  font-size:13px;
  margin-right:10px;
  display:inline !important;
}

.addTaskButton{
  border-radius: 15px;
  border: 0px;
  background-color:#CCCCCC;
  padding:3px 10px;
  color: #686868;
  font-size:13px;
  display:inline !important;
}

.taskList{
  margin-left:20px;
  margin-top: 15px;;
  margin-bottom:15px;
}

.taskCheckbox{
  margin-right:10px;
}

.taskName{
  font-size:15px;
}


.card{
    padding:10px;
    margin-bottom:5vh;
}

.dropdown-items a{
  width:100%;
}

